Fixed clipping when hovering on classrooms cards

--- a/components/classroom-list.css
+++ b/components/classroom-list.css
@@ -99,7 +99,7 @@
 .list-inner-container {
   list-style: none;
   margin: 0;
-  padding: 0 0.25rem 0.25rem;
+  padding: 0.75rem 1.25rem;
 
   display: flex;
   flex-direction: column;
@@ -205,7 +205,7 @@
   transition: scale 0.15s ease;
 
   &:hover {
-    scale: 1.01;
+    scale: 1.025;
   }
 }
 
